# WordleOxide

./: Cargo.toml  README.md
src/: en_wordle.rs  es_wordle.rs  main.rs  ntp.rs  wordle_logic.rs
