[package]
name = "WorldeOxide"
version = "0.1.0"
edition = "2024"

[dependencies]
rsntp = "4.1.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
chrono = "0.4"
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "WorldeOxide"
path = "src/main.rs"
